--- a/apps/docs/content/components/Bento.mdx
+++ b/apps/docs/content/components/Bento.mdx
@@ -184,7 +184,7 @@ Breakpoints use `min-width`, where it will also apply your chosen `span` value t
 | :---------- | :------- | :-----: | :------- | --------------------------------------- |
 | `className` | `string` |         | `false`  | Sets a custom class on the root element |
 
-The Bento component API supports all standard HTML attribute props for the interface `HTMLDivElement`.
+The `Bento` component API supports all standard HTML attribute props for the interface `HTMLDivElement`.
 
 ### Bento.Item
 
@@ -201,7 +201,7 @@ The Bento component API supports all standard HTML attribute props for the inter
 | `visualAsBackground` | `boolean`                                                                              |  `false`  | `false`  | Determines if the `Bento.Visual` child element is set as the background for the `Bento.Item` with the `Bento.Content` overlayed |
 | `order`              | `"default"`, `"reversed"`, `ResponsiveOrder`                                           | `default` | `false`  | Determines the visual order for the `Bento.Item`. This changes the semantic ordering of elements for accessibility.             |
 
-The Bento.Item component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
+The `Bento.Item` component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
 
 ### Bento.Content
 
@@ -214,7 +214,7 @@ The Bento.Item component API supports all standard HTML attribute props for the 
 | `horizontalAlign` | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                          | `"start"`  | `false`  | The horizontal alignment of children within the `Bento.Content` |
 | `verticalAlign`   | `"start"`, `"center"`, `"end"`, `ResponsiveAlign`                                                                          | `"start"`  | `false`  | The vertical alignment of children within the `Bento.Content`.  |
 
-The Bento.Content component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
+The `Bento.Content` component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
 
 ### Bento.Heading
 
@@ -236,4 +236,4 @@ Forwards all props from the [Heading component](/components/Heading), including 
 | `position`  | `string`                                                     | `"50% 50%"` | `false`  | The positioning of the visual.                                                                           |
 | `padding`   | `"condensed"`, `"normal"`, `"spacious"`, `ResponsivePadding` |             | `false`  | Sets a custom class on the root element                                                                  |
 
-The Bento.Visual component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
+The `Bento.Visual` component API supports all standard HTML attribute props for the interface `HTMLDivElement`, while providing some additional behavior as described above.
