fix incorrect documentation

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -38,7 +38,7 @@ import {VideoPlayer} from '@primer/react-brand'
 ## Without branding
 
 ```jsx live
-<VideoPlayer hasBranding={false} title="GitHub media player">
+<VideoPlayer showBranding={false} title="GitHub media player">
   <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
   <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
