renamed doc example

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -53,7 +53,7 @@ import {VideoPlayer} from '@primer/react-brand'
 </VideoPlayer>
 ```
 
-## With custom controls
+## With some hidden controls
 
 ```jsx live
 <VideoPlayer
