VideoPlayer component improvements (#634)
* add support for forwarded refs to useProvidedRefOrCreate hook

* add useIsElementFullScreen hook

* add useVideoMetadata hook

* refactored controls into discrete (mostly) stateless components

* implement new hooks and controls in VideoPlayer

* added some actions to VideoPlayer playground stories

* split controls into their own components

* lots of todos

* restructure components

* rename to fix case

* fix case

* video component refactoring

* tidying

* make controls modular

* rename video tooltip component

* make renderControls optional

* basic tests

* fix lint error

* refactoring

* use context for video

* docs and tidying

* remove unused style files

* tidy tests

* tidy

* add back mistakenly removed VolumeControl styles

* use VolumeControl styles

* format times when over 1 hour

* update storybook example video src

* fix typo

* rename showTitle to visuallyHiddenTitle and invert it

* add changeset

* remove eslint a11y ignore

* remove some unnecessary anonymous functions

* revert changes to useRef hook

* split caption colours into css variables

* group VideoPlayer exports under VideoPlayer object

* forward controls props to underlying elements

* disable keyboard shortcuts

* fix incorrectly committed story

* address PR feedback

* update docs

* improve play overlay styles

* fix border radius

* fix linter

* remove aria-hidden

* fix unbalanced parens

* update changeset

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>

* update changeset

* fix incorrect documentation

* added missing example to docs

* update design token naming

* ditch ternaries in favour of logical AND

* remove anonymous inline function

* remove controls components export

* add todo

* github-actions[bot] Regenerated snapshots

* renamed doc example

* update snapshots

* style tweak

---------

Co-authored-by: Rez <13340707+rezrah@users.noreply.github.com>
Co-authored-by: joshfarrant <joshfarrant@use

--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -14,10 +14,6 @@ import {VideoPlayer} from '@primer/react-brand'
 
 ## Examples
 
-<!---
-TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a temporary solution to load assets in production deployments, but currently doesn't work in dev mode or preview URLs
--->
-
 ### Default
 
 ```jsx live
@@ -42,8 +38,66 @@ TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a t
 ## Without branding
 
 ```jsx live
-<VideoPlayer branding={false} title="GitHub media player">
+<VideoPlayer showBranding={false} title="GitHub media player">
   <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+</VideoPlayer>
+```
+
+## With visually hidden title
+
+```jsx live
+<VideoPlayer visuallyHiddenTitle title="GitHub media player">
+  <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+</VideoPlayer>
+```
+
+## With some hidden controls
+
+```jsx live
+<VideoPlayer
+  title="GitHub media player"
+  showPlayPauseButton={false}
+  showSeekControl={true}
+  showCCButton={false}
+  showMuteButton={false}
+  showVolumeControl={false}
+  showFullScreenButton={false}
+>
+  <VideoPlayer.Source
+    src="https://primer.github.io/brand/assets/example.mp4"
+    type="video/mp4"
+  />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+</VideoPlayer>
+```
+
+## Hide controls when paused
+
+```jsx live
+<VideoPlayer title="GitHub media player" showControlsWhenPaused={false}>
+  <VideoPlayer.Source
+    src="https://primer.github.io/brand/assets/example.mp4"
+    type="video/mp4"
+  />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+</VideoPlayer>
+```
+
+## Minimal
+
+```jsx live
+<VideoPlayer
+  title="GitHub media player"
+  visuallyHiddenTitle
+  showBranding={false}
+  showControlsWhenPaused={false}
+>
+  <VideoPlayer.Source
+    src="https://primer.github.io/brand/assets/example.mp4"
+    type="video/mp4"
+  />
   <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
 </VideoPlayer>
 ```
@@ -56,13 +110,21 @@ TODO: Fix asset loading in environments that don't use `pathPrefix`. This is a t
 
 `VideoPlayer` provides a React alternative to the native HTML `<video />`.
 
-| Name        | Type                                   | Default | Required | Description                                                          |
-| :---------- | :------------------------------------- | :-----: | :------: | :------------------------------------------------------------------- |
-| `title`     | `string`                               |         |  `true`  | Sets the title of the video                                          |
-| `children`  | `React.ReactNode`, `React.ReactNode[]` |         |  `true`  | Takes `<source>` and `<track>` elements to present video information |
-| `poster`    | `string`                               |         | `false`  | Sets an image as the starting frame for the video element            |
-| `branding`  | `boolean`                              |         | `false`  | Displays GitHub branding next to video title                         |
-| `className` | `string`                               |         | `false`  | Sets a custom class                                                  |
+| Name                     | Type                                   | Default | Required | Description                                                     |
+| :----------------------- | :------------------------------------- | :-----: | :------: | :-------------------------------------------------------------- |
+| `children`               | `React.ReactNode`, `React.ReactNode[]` |         |  `true`  | Takes `<VideoPlayer.Source>` and `<VideoPlayer.Track>` elements |
+| `title`                  | `string`                               |         |  `true`  | Sets the title of the video                                     |
+| `visuallyHiddenTitle`    | `boolean`                              |         | `false`  | Visually hides the title of the video in the upper-left corner  |
+| `showBranding`           | `boolean`                              | `true`  | `false`  | Displays GitHub branding next to video title                    |
+| `poster`                 | `string`                               |         | `false`  | Sets an image as the starting frame for the video element       |
+| `className`              | `string`                               |         | `false`  | Sets a custom class on the `<video>` element                    |
+| `showControlsWhenPaused` | `boolean`                              | `true`  | `false`  | Show the video controls when paused                             |
+| `showPlayPauseButton`    | `boolean`                              | `true`  | `false`  | Show the play button control                                    |
+| `showSeekControl`        | `boolean`                              | `true`  | `false`  | Show the seek control                                           |
+| `showCCButton`           | `boolean`                              | `true`  | `false`  | Show the closed caption toggle control                          |
+| `showMuteButton`         | `boolean`                              | `true`  | `false`  | Show the mute button control                                    |
+| `showVolumeControl`      | `boolean`                              | `true`  | `false`  | Show the volume control                                         |
+| `showFullScreenButton`   | `boolean`                              | `true`  | `false`  | Show the full screen button control                             |
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
 
@@ -70,14 +132,7 @@ The component API supports all standard HTML attribute props, while providing so
   VideoPlayer.Source <Label>Required</Label>
 </h3>
 
-`VideoPlayer.Source` provides a React alternative to the native HTML `<source />`.
-
-| Name   | Type     | Default | Required | Description                           |
-| :----- | :------- | :-----: | :------: | :------------------------------------ |
-| `src`  | `string` |         |  `true`  | Sets the URL of the video content     |
-| `type` | `string` |         | `false`  | Sets media type for the video content |
-
-The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
+`VideoPlayer.Source` provides a React alternative to the native HTML `<source />`. The component API supports all standard HTML attribute props.
 
 <h3>
   VideoPlayer.Track <Label>Required</Label>
@@ -85,12 +140,8 @@ The component API supports all standard HTML attribute props, while providing so
 
 `VideoPlayer.Track` provides a React alternative to the native HTML `<track />`.
 
-| Name      | Type                                                                      | Default | Required | Description                                                                                                                              |
-| :-------- | :------------------------------------------------------------------------ | :-----: | :------: | :--------------------------------------------------------------------------------------------------------------------------------------- |
-| `src`     | `string`                                                                  |         |  `true`  | Sets the source of the VTT file containing captions                                                                                      |
-| `kind`    | `'subtitles'`, `'captions'`, `'descriptions'`, `'chapters'`, `'metadata'` |         | `false`  | Sets how the text track is meant to be used                                                                                              |
-| `srcLang` | `string`                                                                  |         | `false`  | Language of the text data. It must be a valid [BCP 47](https://r12a.github.io/app-subtags/) language tag.                                |
-| `label`   | `string`                                                                  |         | `false`  | A user-readable title of the text track which is used by the browser when listing available text tracks.                                 |
-| `default` | `boolean`                                                                 |         | `false`  | This attribute indicates that the track should be enabled unless the user's preferences indicate that another track is more appropriate. |
+| Name   | Type                                                                      |   Default    | Required | Description                                 |
+| :----- | :------------------------------------------------------------------------ | :----------: | :------: | :------------------------------------------ |
+| `kind` | `'subtitles'`, `'captions'`, `'descriptions'`, `'chapters'`, `'metadata'` | `'captions'` | `false`  | Sets how the text track is meant to be used |
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
