--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -102,6 +102,85 @@ import {VideoPlayer} from '@primer/react-brand'
 </VideoPlayer>
 ```
 
+## Controlling programmatically
+
+The `VideoPlayer` component exposes a `useVideo` hook that can be used to control the video programmatically. To use the hook, the `VideoPlayer` component must be wrapped in a `VideoPlayer.Provider` component, which usually is done automatically for convenience.
+
+If you want to take advantage of the `useVideo` hook, you should use the `VideoPlayer.WithoutProvider` component instead of the `VideoPlayer` component and manually wrap it in a `VideoPlayer.Provider` component.
+
+Full documentation for the `useVideo` hook can be found [below](#usevideo-context).
+
+```tsx live
+() => {
+  const MyVideoPlayer = () => {
+    const {isPlaying, togglePlaying, seek} = useVideo()
+
+    return (
+      <Stack direction="vertical">
+        <VideoPlayer.WithoutProvider title="GitHub media player"
+          showPlayPauseButton={false}
+          showSeekControl={false}
+          showCCButton={false}
+          showMuteButton={false}
+          showVolumeControl={false}
+          showFullScreenButton={false}
+        >
+          <VideoPlayer.Source src="https://primer.github.io/brand/assets/example.mp4" type="video/mp4" />
+          <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+        </VideoPlayer.WithoutProvider>
+        <Stack direction="horizontal">
+          <Button onClick={() => togglePlaying()}>{isPlaying ? 'Pause' : 'Play'}</Button>
+          <Button onClick={() => seek(0)}>Go to start</Button>
+          <Button onClick={() => seek(t => t + 5)}>Skip 5 seconds</Button>
+        </Stack>
+      </Stack>
+    )
+  }
+
+  return (
+    <VideoPlayer.Provider>
+      <MyVideoPlayer />
+    </VideoPlayer.Provider>
+  )
+}
+```
+
+<h2>useVideo Context</h2>
+
+The `useVideo` context provides a comprehensive API for managing video playback, volume, closed captioning, and fullscreen mode.
+
+The context can be accessed by using the `useVideo` hook in any component that is a child of `VideoPlayer.Provider`.
+
+Below is a detailed description of each property and method available in the `useVideo` context.
+
+| Name               | Type                                               | Description                                                                                    |
+| :----------------- | :------------------------------------------------- | :--------------------------------------------------------------------------------------------- |
+| `ref`              | `RefObject<HTMLVideoElement>`                      | A reference to the video element.                                                              |
+| `isPlaying`        | `boolean`                                          | Indicates if the video is currently playing.                                                   |
+| `volume`           | `number`                                           | The current volume of the video, ranging from 0 to 1.                                          |
+| `isMuted`          | `boolean`                                          | Indicates if the video is currently muted.                                                     |
+| `volumeBeforeMute` | `number`                                           | The volume of the video before it was muted, allowing for easy unmuting to the previous level. |
+| `duration`         | `number`                                           | The total duration of the video in seconds.                                                    |
+| `ccEnabled`        | `boolean`                                          | Indicates if closed captions are enabled.                                                      |
+| `isFullScreen`     | `boolean`                                          | Indicates if the video is currently in fullscreen mode.                                        |
+| `play`             | `() => void`                                       | Plays the video.                                                                               |
+| `pause`            | `() => void`                                       | Pauses the video.                                                                              |
+| `togglePlaying`    | `() => void`                                       | Toggles between playing and pausing the video.                                                 |
+| `setVolume`        | `(volumeValOrFn: SetStateAction<number>) => void`  | Sets the volume of the video.                                                                  |
+| `mute`             | `() => void`                                       | Mutes the video.                                                                               |
+| `unmute`           | `() => void`                                       | Unmutes the video.                                                                             |
+| `toggleMute`       | `() => void`                                       | Toggles between muting and unmuting the video.                                                 |
+| `setDuration`      | `(duration: number) => void`                       | Sets the duration of the video.                                                                |
+| `seekToPercent`    | `(percent: number) => void`                        | Seeks the video to a specific percentage of its duration.                                      |
+| `seek`             | `(secondsValOrFn: SetStateAction<number>) => void` | Seeks the video to an absolute time, or to a relative time if passed a function.               |
+| `enableCC`         | `() => void`                                       | Enables closed captions.                                                                       |
+| `disableCC`        | `() => void`                                       | Disables closed captions.                                                                      |
+| `toggleCC`         | `() => void`                                       | Toggles closed captions on and off.                                                            |
+| `enterFullScreen`  | `() => void`                                       | Enters fullscreen mode.                                                                        |
+| `exitFullScreen`   | `() => void`                                       | Exits fullscreen mode.                                                                         |
+| `toggleFullScreen` | `() => void`                                       | Toggles between entering and exiting fullscreen mode.                                          |
+
+
 ## Component props
 
 <h3>
