--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -1,133 +1,123 @@
 ---
-title: Card
-description: Use the card component to display information in a compact way and link to other internal pages.
+title: Section
+status: Experimental
+source: https://github.com/primer/brand/tree/main/packages/react/src/Section/Section.tsx
+storybook: '/brand/storybook/?path=/story/components-section--default'
+description: Use the section component to create a semantic section in the page and group related content together.
+a11yReviewed: false
 ---
 
-import CustomVideoPlayer from '../../../src/components/custom-video-player'
-import ComponentLayout from '../../../src/layouts/component-layout'
-export default ComponentLayout
+import {PropTableValues} from '../../../src/components'
+import {SectionPaddingVariants} from '@primer/react-brand'
 
-![An image showing a card with a Copilot Octicon.](https://github.com/primer/brand/assets/6951037/5bb4e3dd-8f53-44c5-a5ed-987c732eaf8f)
+```js
+import {Section} from '@primer/react-brand'
+```
 
-## Usage
+## Examples
 
-Use cards to summarize the central idea behind some content and provide a link to its corresponding detailed resource. It is important to present the information in a concise manner, avoiding lengthy and complex descriptions.
+### Default
 
-Cards should always be used in groups of two or more related concepts.
+The default section wraps content in a semantic section element and provides default paddings for the content.
 
-<DoDontContainer>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/6951037/139deb0e-0143-4051-a8c8-49b854b58727" />
-    <Caption>Use cards in groups to display related information.</Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/6951037/1f009b98-01b8-4cb3-af30-83ccac31c8c9" />
-    <Caption>
-      Don't use isolated cards. Consider using a CTABanner instead.
-    </Caption>
-  </Dont>
-</DoDontContainer>
+```jsx live
+<Section>
+  <SectionIntro>
+    <SectionIntro.Heading>Section</SectionIntro.Heading>
+    <SectionIntro.Description>
+      This content is wrapped in a Section component.
+    </SectionIntro.Description>
+  </SectionIntro>
+</Section>
+```
 
-### Stacked
+### With custom padding
 
-Cards should be stacked to display a list of items that are related to each other. If displaying a visual asset, do so for all cards to achieve a visually balanced layout. The visual asset should be the same type for all cards, either an icon or an image.
+```jsx live
+<>
+  <Section paddingBlockStart="none" paddingBlockEnd="spacious">
+    <SectionIntro>
+      <SectionIntro.Heading>Section</SectionIntro.Heading>
+      <SectionIntro.Description>
+        This section has a custom padding at the top and bottom.
+      </SectionIntro.Description>
+    </SectionIntro>
+  </Section>
+</>
+```
 
-For a better visual experience, we recommend using similar length size for the heading and description in all stacked cards.
+### With background color
 
-<DoDontContainer>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/6951037/28b8dbfa-9ed5-40ba-b1a3-d501ac3be4b8" />
-    <Caption>
-      Use the same type of visual asset for all cards and a similar length size
-      for the content.
-    </Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/6951037/6d494165-312e-4e84-94df-199d1d82fd50" />
-    <Caption>
-      Don't use different length sizes for the title or the description.
-    </Caption>
-  </Dont>
-</DoDontContainer>
+```jsx live
+<>
+  <Section backgroundColor="var(--brand-color-canvas-inset)">
+    <SectionIntro>
+      <SectionIntro.Heading>Section</SectionIntro.Heading>
+      <SectionIntro.Description>
+        This section has a custom background color.
+      </SectionIntro.Description>
+    </SectionIntro>
+  </Section>
+</>
+```
 
-When using an image as the visual asset, we recommend using the same aspect ratio for all images. This will create a more balanced visual experience.
+### With background image
 
-<DoDontContainer>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/6951037/1a6decfc-a840-440b-8ec7-bf25b7716711" />
-    <Caption>
-      Use the same image ratio and a similar length sizes for the content.
-    </Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/6951037/cffafadf-2e9d-47f0-a6db-6f89fb48fabe" />
-    <Caption>
-      Don't use different image ratios and a different length size for the
-      content.
-    </Caption>
-  </Dont>
-</DoDontContainer>
+```jsx live
+<>
+  <Section
+    backgroundImageSrc="url(https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651)"
+    backgroundImageSize="cover"
+    backgroundImagePosition="top center"
+  >
+    <ThemeProvider colorMode="dark">
+      <Grid>
+        <Grid.Column>
+          <SectionIntro>
+            <SectionIntro.Heading>Section</SectionIntro.Heading>
+            <SectionIntro.Description>
+              This section has a custom background image.
+            </SectionIntro.Description>
+          </SectionIntro>
+        </Grid.Column>
+      </Grid>
+    </ThemeProvider>
+  </Section>
+</>
+```
 
-Cards typically appear in groups of three or four in desktop viewports. For smaller viewports, or when more than four cards are needed, we recommend stacking the cards vertically. You can use the [Grid](/components/Grid) or the [Stack](/components/Stack) component to achieve this.
+### Rounded
 
-<div>
-  <CustomVideoPlayer
-    width="100%"
-    src="https://github.com/primer/brand/assets/6951037/a9ceec00-59c9-4471-a274-f516790f43c9"
-  />
-  <Caption>
-    Stack cards vertically so that the content has enough line length.
-  </Caption>
-</div>
+```jsx live
+<>
+  <ThemeProvider colorMode="dark">
+    <Section backgroundColor="var(--brand-color-canvas-default)"></Section>
+  </ThemeProvider>
+  <Section backgroundColor="var(--brand-color-canvas-default)" rounded>
+    <Grid>
+      <Grid.Column>
+        <SectionIntro>
+          <SectionIntro.Heading>Section</SectionIntro.Heading>
+          <SectionIntro.Description>
+            This section has rounded top corners that overlap the previous
+            section.
+          </SectionIntro.Description>
+        </SectionIntro>
+      </Grid.Column>
+    </Grid>
+  </Section>
+</>
+```
 
-## Anatomy
+## Component props
 
-![An image showing the card anatomy with an icon as a visual asset, a heading, a description and a CTA text in a vertical order.](https://github.com/primer/brand/assets/6951037/2ae395d0-227d-4794-8e0b-f709a431e636)
+### Section
 
-### Visual asset
-
-The visual asset is optional and can be an image or an icon. It can be used to provide a visual cue to the user about the content of the card. To avoid visual noise, we recommend using only one icon or image, but not both in the same card.
-
-![An image showing two cards, one with an Icon and another with an Image as the visual assets options.](https://github.com/primer/brand/assets/6951037/21623e82-2ea5-499a-a78f-82b09915af16)
-
-<DoDontContainer>
-  <Do>
-    <img src="https://github.com/primer/brand/assets/6951037/e5494fd3-76b1-45fd-8aa7-4acfe834b159" />
-    <Caption>Use only one visual asset per card.</Caption>
-  </Do>
-  <Dont>
-    <img src="https://github.com/primer/brand/assets/6951037/bc29b10b-ee0b-421d-8bc4-0a95fad3791b" />
-    <Caption>Don't use both icon and image as the visual asset.</Caption>
-  </Dont>
-</DoDontContainer>
-
-### Label
-
-The label can be used to indicate the type of content or its status. For example, use it to indicate that the content is `new` or that it is a `beta` feature. The label is optional and can be used along with a visual asset.
-
-![An image showing two cards, one with a Label and another one with Label and Icon.](https://github.com/primer/brand/assets/6951037/3e16bb51-9e19-4a98-a9c2-e289d4bf540c)
-
-### Heading
-
-The heading is the main title of the card. It should be short and concise.
-
-### Description
-
-The description is an optional short text that extends the information provided by the heading.
-
-### Call to action
-
-The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
-
-## Options
-
-### Border
-
-Card offers a variation with a border. Border is disabled by default.
-
-## Related components
-
-- [Pillar](/components/Pillar): To display related content with less visual emphasis.
-- [River](/components/River): To display a list of content items with a visual asset.
-- [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
-- [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
+| name                      | type                                                                     | default    | required | description                                      |
+| ------------------------- | ------------------------------------------------------------------------ | ---------- | -------- | ------------------------------------------------ |
+| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the top of the section    |
+| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section |
+| `backgroundColor`         | `string`                                                                 |            | `false`  | Add a background color                           |
+| `backgroundImageSrc`      | `string`                                                                 |            | `false`  | Add a background image                           |
+| `backgroundImageSize`     | `string`                                                                 | `'cover'`  | `false`  | Control the size of the background image         |
+| `backgroundImagePosition` | `string`                                                                 | `'center'` | `false`  | Control the position of the background image     |
