--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -164,7 +164,7 @@ Full documentation for the `useVideo` hook can be found [below](#usevideo-contex
 }
 ```
 
-<h2>useVideo Context</h2>
+## useVideo Context
 
 The `useVideo` context provides a comprehensive API for managing video playback, volume, closed captioning, and fullscreen mode.
 
@@ -201,9 +201,9 @@ Below is a detailed description of each property and method available in the `us
 
 ## Component props
 
-<h3>
-  VideoPlayer <Label>Required</Label>
-</h3>
+
+### VideoPlayer <Label>Required</Label>
+
 
 `VideoPlayer` provides a React alternative to the native HTML `<video />`.
 
@@ -225,15 +225,12 @@ Below is a detailed description of each property and method available in the `us
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
 
-<h3>
-  VideoPlayer.Source <Label>Required</Label>
-</h3>
+### VideoPlayer.Source <Label>Required</Label>
 
 `VideoPlayer.Source` provides a React alternative to the native HTML `<source />`. The component API supports all standard HTML attribute props.
 
-<h3>
-  VideoPlayer.Track <Label>Required</Label>
-</h3>
+
+### VideoPlayer.Track <Label>Required</Label>
 
 `VideoPlayer.Track` provides a React alternative to the native HTML `<track />`.
 
@@ -243,8 +240,6 @@ The component API supports all standard HTML attribute props, while providing so
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
 
-<h3>
-  VideoPlayer.Provider
-</h3>
+###  VideoPlayer.Provider
 
-`VideoPlayer.Provider` is used in conjunction with the `useVideo` hook to provide a comprehensive API for managing video playback, volume, closed captioning, and fullscreen mode.
+`VideoPlayer.Provider` can be used in conjunction with the `useVideo` hook to enable programmatic access to features such as video playback, volume, closed captioning, and fullscreen mode.
