--- a/apps/docs/content/components/VideoPlayer.mdx
+++ b/apps/docs/content/components/VideoPlayer.mdx
@@ -102,11 +102,108 @@ import {VideoPlayer} from '@primer/react-brand'
 </VideoPlayer>
 ```
 
+## Custom play icon
+
+```jsx live
+<VideoPlayer
+  title="GitHub media player"
+  playIcon={() => <PlayIcon size={96} />}
+>
+  <VideoPlayer.Source
+    src="https://primer.github.io/brand/assets/example.mp4"
+    type="video/mp4"
+  />
+  <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+</VideoPlayer>
+```
+
+## Controlling programmatically
+
+The `VideoPlayer` component exposes a `useVideo` hook that can be used to control the video programmatically. To use the hook, the `VideoPlayer` component must be wrapped in a `VideoPlayer.Provider` component.
+
+Full documentation for the `useVideo` hook can be found [below](#usevideo-context).
+
+```tsx live
+() => {
+  const MyVideoPlayer = () => {
+    const {isPlaying, togglePlaying, seek} = useVideo()
+
+    return (
+      <Stack direction="vertical">
+        <VideoPlayer
+          title="GitHub media player"
+          showPlayPauseButton={false}
+          showSeekControl={false}
+          showCCButton={false}
+          showMuteButton={false}
+          showVolumeControl={false}
+          showFullScreenButton={false}
+        >
+          <VideoPlayer.Source
+            src="https://primer.github.io/brand/assets/example.mp4"
+            type="video/mp4"
+          />
+          <VideoPlayer.Track src="https://primer.github.io/brand/assets/example.vtt" />
+        </VideoPlayer>
+        <Stack direction="horizontal">
+          <Button onClick={() => togglePlaying()}>
+            {isPlaying ? 'Pause' : 'Play'}
+          </Button>
+          <Button onClick={() => seek(0)}>Go to start</Button>
+          <Button onClick={() => seek((t) => t + 5)}>Skip 5 seconds</Button>
+        </Stack>
+      </Stack>
+    )
+  }
+
+  return (
+    <VideoPlayer.Provider>
+      <MyVideoPlayer />
+    </VideoPlayer.Provider>
+  )
+}
+```
+
+## useVideo Context
+
+The `useVideo` context provides a comprehensive API for managing video playback, volume, closed captioning, and fullscreen mode.
+
+The context can be accessed by using the `useVideo` hook in any component that is a child of `VideoPlayer.Provider`.
+
+Below is a detailed description of each property and method available in the `useVideo` context.
+
+| Name               | Type                                               | Description                                                                                    |
+| :----------------- | :------------------------------------------------- | :--------------------------------------------------------------------------------------------- |
+| `ref`              | `RefObject<HTMLVideoElement>`                      | A reference to the video element.                                                              |
+| `isPlaying`        | `boolean`                                          | Indicates if the video is currently playing.                                                   |
+| `volume`           | `number`                                           | The current volume of the video, ranging from 0 to 1.                                          |
+| `isMuted`          | `boolean`                                          | Indicates if the video is currently muted.                                                     |
+| `volumeBeforeMute` | `number`                                           | The volume of the video before it was muted, allowing for easy unmuting to the previous level. |
+| `duration`         | `number`                                           | The total duration of the video in seconds.                                                    |
+| `ccEnabled`        | `boolean`                                          | Indicates if closed captions are enabled.                                                      |
+| `isFullScreen`     | `boolean`                                          | Indicates if the video is currently in fullscreen mode.                                        |
+| `play`             | `() => void`                                       | Plays the video.                                                                               |
+| `pause`            | `() => void`                                       | Pauses the video.                                                                              |
+| `togglePlaying`    | `() => void`                                       | Toggles between playing and pausing the video.                                                 |
+| `setVolume`        | `(volumeValOrFn: SetStateAction<number>) => void`  | Sets the volume of the video.                                                                  |
+| `mute`             | `() => void`                                       | Mutes the video.                                                                               |
+| `unmute`           | `() => void`                                       | Unmutes the video.                                                                             |
+| `toggleMute`       | `() => void`                                       | Toggles between muting and unmuting the video.                                                 |
+| `setDuration`      | `(duration: number) => void`                       | Sets the duration of the video.                                                                |
+| `seekToPercent`    | `(percent: number) => void`                        | Seeks the video to a specific percentage of its duration.                                      |
+| `seek`             | `(secondsValOrFn: SetStateAction<number>) => void` | Seeks the video to an absolute time, or to a relative time if passed a function.               |
+| `enableCC`         | `() => void`                                       | Enables closed captions.                                                                       |
+| `disableCC`        | `() => void`                                       | Disables closed captions.                                                                      |
+| `toggleCC`         | `() => void`                                       | Toggles closed captions on and off.                                                            |
+| `enterFullScreen`  | `() => void`                                       | Enters fullscreen mode.                                                                        |
+| `exitFullScreen`   | `() => void`                                       | Exits fullscreen mode.                                                                         |
+| `toggleFullScreen` | `() => void`                                       | Toggles between entering and exiting fullscreen mode.                                          |
+
 ## Component props
 
-<h3>
-  VideoPlayer <Label>Required</Label>
-</h3>
+
+### VideoPlayer <Label>Required</Label>
+
 
 `VideoPlayer` provides a React alternative to the native HTML `<video />`.
 
@@ -128,15 +225,12 @@ import {VideoPlayer} from '@primer/react-brand'
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
 
-<h3>
-  VideoPlayer.Source <Label>Required</Label>
-</h3>
+### VideoPlayer.Source <Label>Required</Label>
 
 `VideoPlayer.Source` provides a React alternative to the native HTML `<source />`. The component API supports all standard HTML attribute props.
 
-<h3>
-  VideoPlayer.Track <Label>Required</Label>
-</h3>
+
+### VideoPlayer.Track <Label>Required</Label>
 
 `VideoPlayer.Track` provides a React alternative to the native HTML `<track />`.
 
@@ -145,3 +239,7 @@ The component API supports all standard HTML attribute props, while providing so
 | `kind` | `'subtitles'`, `'captions'`, `'descriptions'`, `'chapters'`, `'metadata'` | `'captions'` | `false`  | Sets how the text track is meant to be used |
 
 The component API supports all standard HTML attribute props, while providing some additional behavior as described above.
+
+###  VideoPlayer.Provider
+
+`VideoPlayer.Provider` can be used in conjunction with the `useVideo` hook to enable programmatic access to features such as video playback, volume, closed captioning, and fullscreen mode.
