Add multiple background image support

--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -117,7 +117,7 @@ The default section wraps content in a semantic section element and provides def
 | ------------------------- | ------------------------------------------------------------------------ | ---------- | -------- | ------------------------------------------------ |
 | `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the top of the section    |
 | `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section |
-| `backgroundColor`         | `string`                                                                 |            | `false`  | Add a background color                           |
-| `backgroundImageSrc`      | `string`                                                                 |            | `false`  | Add a background image                           |
-| `backgroundImageSize`     | `string`                                                                 | `'cover'`  | `false`  | Control the size of the background image         |
-| `backgroundImagePosition` | `string`                                                                 | `'center'` | `false`  | Control the position of the background image     |
+| `backgroundColor`         | `string` \| `string[]`                                                   |            | `false`  | Add a background color                           |
+| `backgroundImageSrc`      | `string` \| `string[]`                                                   |            | `false`  | Add one or more background image                 |
+| `backgroundImageSize`     | `string` \| `string[]`                                                   |            | `false`  | Control the size of the background image(s)      |
+| `backgroundImagePosition` | `string` \| `string[]`                                                   |            | `false`  | Control the position of the background image(s)  |
