Fix documentation example

--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -66,7 +66,7 @@ The default section wraps content in a semantic section element and provides def
 ```jsx live
 <>
   <Section
-    backgroundImageSrc="url(https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651)"
+    backgroundImageSrc="https://github.com/user-attachments/assets/068634a3-926d-49b8-b949-0b1e2a204651"
     backgroundImageSize="cover"
     backgroundImagePosition="top center"
   >
