--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -113,11 +113,11 @@ The default section wraps content in a semantic section element and provides def
 
 ### Section
 
-| name                      | type                                                                     | default    | required | description                                      |
-| ------------------------- | ------------------------------------------------------------------------ | ---------- | -------- | ------------------------------------------------ |
-| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the top of the section    |
-| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section |
-| `backgroundColor`         | `string` \| `string[]`                                                   |            | `false`  | Add a background color                           |
-| `backgroundImageSrc`      | `string` \| `string[]`                                                   |            | `false`  | Add one or more background image                 |
-| `backgroundImageSize`     | `string` \| `string[]`                                                   |            | `false`  | Control the size of the background image(s)      |
-| `backgroundImagePosition` | `string` \| `string[]`                                                   |            | `false`  | Control the position of the background image(s)  |
+| name                      | type                                                                     | default    | required | description                                                                                                                                                   |
+| ------------------------- | ------------------------------------------------------------------------ | ---------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `paddingBlockStart`       | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the top of the section.                                                                                                                |
+| `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
+| `backgroundColor`         | `string` \| `string[]`                                                   |            | `false`  | Add a background color.                                                                                                                                       |
+| `backgroundImageSrc`      | `string` \| `string[]`                                                   |            | `false`  | Add one or more background images                                                                                                                             |
+| `backgroundImageSize`     | `string` \| `string[]`                                                   |            | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `cover`.                        |
+| `backgroundImagePosition` | `string` \| `string[]`                                                   |            | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
