--- a/apps/docs/content/components/Section/index.mdx
+++ b/apps/docs/content/components/Section/index.mdx
@@ -119,5 +119,5 @@ The default section wraps content in a semantic section element and provides def
 | `paddingBlockEnd`         | <PropTableValues values={[...SectionPaddingVariants]} commaSeparated  /> | `'normal'` | `false`  | Control the padding at the bottom of the section.                                                                                                             |
 | `backgroundColor`         | `string` \| `string[]`                                                   |            | `false`  | Add a background color.                                                                                                                                       |
 | `backgroundImageSrc`      | `string` \| `string[]`                                                   |            | `false`  | Add one or more background images                                                                                                                             |
-| `backgroundImageSize`     | `string` \| `string[]`                                                   |            | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `cover`.                        |
-| `backgroundImagePosition` | `string` \| `string[]`                                                   |            | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
+| `backgroundImageSize`     | `string` \| `string[]`                                                   | `'cover'`  | `false`  | Control the size of the background image(s). This accepts all CSS `background-size` supported values, including keywords like `contain`.                      |
+| `backgroundImagePosition` | `string` \| `string[]`                                                   | `'50%`     | `false`  | Control the position of the background image(s). This accepts all CSS `background-position` supported values, including keywords like `top` and edge offsets. |
